--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,10 @@
-Brotli==1.0.9
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.0.4
-colorama==0.4.4
-ConfigArgParse==1.0
-dataclasses==0.8
-Flask==2.0.0
-Flask-BasicAuth==0.2.0
-gevent==20.5.0
-geventhttpclient==1.5.3
-geventhttpclient-wheels==1.3.1.dev0
-greenlet==1.1.2
-idna==3.3
-importlib-metadata==0.7
-itsdangerous==2.0.1
-Jinja2==3.0.3
-locust==1.3.0
-MarkupSafe==2.0.1
-msgpack==1.0.3
-psutil==5.9.0
-pycparser==2.21
-pywin32==303
-pyzmq==22.3.0
-requests==2.27.1
+distlib==0.3.4
+filelock==3.4.1
+importlib-metadata==4.8.3
+importlib-resources==5.4.0
+platformdirs==2.4.0
 six==1.16.0
-typing_extensions==4.1.1
-urllib3==1.26.9
-Werkzeug==2.0.3
+typing-extensions==4.1.1
+virtualenv==20.14.1
+virtualenvwrapper-win==1.2.7
+zipp==3.6.0
